tests/snapshots/integration/integration__i18n_dynamic_en.snap
---
source: tests/integration.rs
expression: items
---
[
  {
    "value": "hello ",
    "display_override": "hello",
    "description": "Hello description"
  },
  {
    "value": "bye ",
    "display_override": "bye",
    "description": "Bye description"
  }
]
