tests/snapshots/integration/integration__i18n_dynamic_zh.snap
---
source: tests/integration.rs
expression: items
---
[
  {
    "value": "hello ",
    "display_override": "hello",
    "description": "你好描述"
  },
  {
    "value": "bye ",
    "display_override": "bye",
    "description": "再见描述"
  }
]
