tests/snapshots/integration/integration__i18n_greet_subcommands_en.snap
---
source: tests/integration.rs
expression: items
---
[
  {
    "value": "install ",
    "display_override": "install",
    "description": "Install dependencies"
  },
  {
    "value": "run ",
    "display_override": "run",
    "description": "Run a script"
  }
]
