tests/snapshots/integration/integration__i18n_greet_subcommands_zh.snap
---
source: tests/integration.rs
expression: items
---
[
  {
    "value": "install ",
    "display_override": "install",
    "description": "安装依赖"
  },
  {
    "value": "run ",
    "display_override": "run",
    "description": "运行脚本"
  }
]
