tests/snapshots/integration/integration__option_with_style.snap
---
source: tests/integration.rs
expression: "normalize_items(&items, &sandbox.project_dirs[\"minimal\"])"
---
[
  {
    "value": "--global ",
    "display_override": "--global",
    "description": "全局安装",
    "style": {
      "fg": "green"
    }
  },
  {
    "value": "-g ",
    "display_override": "-g",
    "description": "全局安装",
    "style": {
      "fg": "green"
    }
  }
]
